# ai-wiki

./: .gitignore  Cargo.toml  README.md  a  ai-wiki.toml  d  justfile  math
.claude/: settings.json
crates/ai-wiki/: Cargo.toml
crates/ai-wiki-core/: Cargo.toml
crates/ai-wiki-core/src/: config.rs  lib.rs  queue.rs  wiki.rs
crates/ai-wiki-core/src/preprocessing/: detect.rs  media.rs  mod.rs  pdf.rs  zip_extract.rs
crates/ai-wiki-mcp/: Cargo.toml
crates/ai-wiki-mcp/src/: main.rs
crates/ai-wiki/src/: ingest.rs  main.rs  process.rs  tui.rs
crates/ai-wiki/tests/: integration_test.rs
crates/pdf-dump/: Cargo.toml
crates/pdf-dump/src/: main.rs
docs/: README.md
docs/archive/: 2026-04-10-192516-read-docsdesignpromptmd-docsdesignworkflow.txt  2026-04-11-074157-mempalace-is-an-mcp-server-consult-it-for-archit.txt
docs/design/: application.md  workflow.md
docs/superpowers/plans/: 2026-04-09-ai-wiki-implementation.md
docs/superpowers/reviews/: 2026-04-09-code-review-findings.md
docs/superpowers/specs/: 2026-04-09-ai-wiki-design.md  2026-04-10-multi-wiki-design.md
