[workspace]
members = ["crates/ai-wiki-core", "crates/ai-wiki", "crates/ai-wiki-mcp", "crates/pdf-dump"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
crossterm = "0.28"
glob = "0.3"
indexmap = "2"
lopdf = "0.40"
pdf-extract = "0.10"
ratatui = "0.29"
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.51", features = ["full"] }
toml = "0.8"
zip = "2"

# Do not set panic = "abort" — catch_unwind in pdf.rs requires unwinding
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true
