[package]
name = "ai-wiki-core"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
chrono.workspace = true
glob.workspace = true
indexmap.workspace = true
lopdf.workspace = true
pdf-extract.workspace = true
rusqlite.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
